force-app/main/default/objects/Judgment__c/fields/Legal_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Sub_Status__c</fullName>
    <label>Legal Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Legal_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Recommended for legal action</fullName>
            </value>
            <value>
                <fullName>Approved for legal action</fullName>
            </value>
            <value>
                <fullName>Demand Letter Sent</fullName>
            </value>
            <value>
                <fullName>Media Requested awaiting</fullName>
            </value>
            <value>
                <fullName>Settlement Proposal Accepted</fullName>
            </value>
            <value>
                <fullName>Action Rejected</fullName>
            </value>
            <value>
                <fullName>Claim Issued</fullName>
            </value>
            <value>
                <fullName>Claim Served</fullName>
            </value>
            <value>
                <fullName>Payment Arrangement</fullName>
            </value>
            <value>
                <fullName>Defended Action</fullName>
            </value>
            <value>
                <fullName>Entered Credit Counselling</fullName>
            </value>
            <value>
                <fullName>Entered Insolvency</fullName>
            </value>
            <value>
                <fullName>Locating Debtor</fullName>
            </value>
            <value>
                <fullName>Counter Claim</fullName>
            </value>
            <value>
                <fullName>Granted</fullName>
            </value>
            <value>
                <fullName>Granted; Assessment</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Locating Enforcement</fullName>
            </value>
            <value>
                <fullName>Wage Garnishment</fullName>
            </value>
            <value>
                <fullName>Bank Garnishment</fullName>
            </value>
            <value>
                <fullName>Writ Filed</fullName>
            </value>
            <value>
                <fullName>Writ &amp; Garnishment</fullName>
            </value>
            <value>
                <fullName>Writ and Payment Arrangement</fullName>
            </value>
            <value>
                <fullName>Enforcement Lost</fullName>
            </value>
            <value>
                <fullName>Judicial Sale</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
            <value>
                <fullName>Vacated</fullName>
            </value>
            <value>
                <fullName>Reviewing for Legal action</fullName>
            </value>
            <value>
                <fullName>Settlement Letter Sent</fullName>
            </value>
            <value>
                <fullName>Legal Action Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>