force-app/main/default/objects/Judgment__c/fields/Non_Balance_Adjusting_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Non_Balance_Adjusting_Disbursements__c</fullName>
    <inlineHelpText>Non Balance Adjusting Disbursements</inlineHelpText>
    <label>Non Balance Adjusting Disbursements</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>