force-app/main/default/objects/Judgment__c/fields/Number_of_payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_payments__c</fullName>
    <label>Number of payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>