force-app/main/default/objects/Judgment__c/fields/Payment_frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_frequency__c</fullName>
    <inlineHelpText>Payment frequency</inlineHelpText>
    <label>Payment frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>