force-app/main/default/objects/Judgment__c/fields/Payment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Start Date</label>
    <type>Date</type>
</CustomField>