force-app/main/default/objects/Judgment__c/fields/Payment_Start_Date_Day_Format__c.field-meta.xml
<CustomField>
    <fullName>Payment_Start_Date_Day_Format__c</fullName>
    <formula>TEXT(DAY( Payment_Start_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Start Date Day Format</label>
    <type>Text</type>
</CustomField>