force-app/main/default/objects/Judgment__c/fields/Placed_Agency__c.field-meta.xml
<CustomField>
    <fullName>Placed_Agency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Placed Agency</label>
    <length>5</length>
    <type>Text</type>
</CustomField>