force-app/main/default/objects/Judgment__c/fields/Placed_Province__c.field-meta.xml
<CustomField>
    <fullName>Placed_Province__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Placed Province</label>
    <length>25</length>
    <type>Text</type>
</CustomField>