force-app/main/default/objects/Judgment__c/fields/Placement_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Placement_Status_Code__c</fullName>
    <description>Placement Status Code to set on Account in case Judgment Legal Status and Sub Status are updated</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Placement Status Code to set on Account in case Judgment Legal Status and Sub Status are updated</inlineHelpText>
    <label>Placement Status Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>