force-app/main/default/objects/Judgment__c/fields/Plaintiff__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plaintiff</label>
    <length>250</length>
    <type>Text</type>
</CustomField>