force-app/main/default/objects/Judgment__c/fields/Product_1__c.field-meta.xml
<CustomField>
    <fullName>Product_1__c</fullName>
    <description>Product 1</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Product 1</inlineHelpText>
    <label>Product 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>