force-app/main/default/objects/Judgment__c/fields/Product_2__c.field-meta.xml
<CustomField>
    <fullName>Product_2__c</fullName>
    <description>Product 2</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Product 2</inlineHelpText>
    <label>Product 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>