force-app/main/default/objects/Judgment__c/fields/Product_3__c.field-meta.xml
<CustomField>
    <fullName>Product_3__c</fullName>
    <description>Product 3</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Product 3</inlineHelpText>
    <label>Product 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>