force-app/main/default/objects/Judgment__c/fields/Remaining_Balance__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Balance__c</fullName>
    <formula>ROUND ( Current_Total_Balance__c  -  Savings_Balance__c , 2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>