force-app/main/default/objects/Judgment__c/fields/Savings_Balance__c.field-meta.xml
<CustomField>
    <fullName>Savings_Balance__c</fullName>
    <formula>ROUND((( Discount__c /100) *   Current_Total_Balance__c), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Savings Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>