force-app/main/default/objects/Judgment__c/fields/Small_Claims_Court__c.field-meta.xml
<CustomField>
    <fullName>Small_Claims_Court__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Small Claims Court</label>
    <referenceTo>Small_Claims_Court__c</referenceTo>
    <relationshipLabel>Judgments</relationshipLabel>
    <relationshipName>Judgments</relationshipName>
    <type>Lookup</type>
</CustomField>