force-app/main/default/objects/Judgment__c/fields/Small_Claims_Court_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Small_Claims_Court_Identifier__c</fullName>
    <description>Small_Claims_Court_Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Small_Claims_Court_Identifier</inlineHelpText>
    <label>Small_Claims_Court_Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>