force-app/main/default/objects/Judgment__c/fields/Small_Claims_Court_Name__c.field-meta.xml
<CustomField>
    <fullName>Small_Claims_Court_Name__c</fullName>
    <formula>Small_Claims_Court__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Small Claims Court Name</label>
    <type>Text</type>
</CustomField>