force-app/main/default/objects/Judgment__c/fields/Small_Claims_Court_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Small_Claims_Court_Phone_Number__c</fullName>
    <formula>Small_Claims_Court__r.Small_Claims_Court_Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Small Claims Court Phone Number</label>
    <type>Text</type>
</CustomField>