force-app/main/default/objects/Judgment__c/fields/Small_Claims_Court_Province__c.field-meta.xml
<CustomField>
    <fullName>Small_Claims_Court_Province__c</fullName>
    <description>Small Claims Court Province</description>
    <formula>TEXT( Small_Claims_Court__r.Small_Claims_Court_Province__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Small Claims Court Province</inlineHelpText>
    <label>Small Claims Court Province</label>
    <type>Text</type>
</CustomField>