force-app/main/default/objects/Judgment__c/fields/Suit_Amount_1__c.field-meta.xml
<CustomField>
    <fullName>Suit_Amount_1__c</fullName>
    <description>Suit Amount 1</description>
    <inlineHelpText>Suit Amount 1</inlineHelpText>
    <label>Suit Amount 1</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>