force-app/main/default/objects/Judgment__c/fields/Suit_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>Suit_Amount_2__c</fullName>
    <description>Suit Amount 2</description>
    <inlineHelpText>Suit Amount 2</inlineHelpText>
    <label>Suit Amount 2</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>