force-app/main/default/objects/Judgment__c/fields/Suit_Amount_3__c.field-meta.xml
<CustomField>
    <fullName>Suit_Amount_3__c</fullName>
    <description>Suit Amount 3</description>
    <inlineHelpText>Suit Amount 3</inlineHelpText>
    <label>Suit Amount 3</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>