force-app/main/default/objects/Judgment__c/fields/Superior_Court__c.field-meta.xml
<CustomField>
    <fullName>Superior_Court__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superior Court</label>
    <referenceTo>Superior_Court__c</referenceTo>
    <relationshipLabel>Judgments</relationshipLabel>
    <relationshipName>Judgments</relationshipName>
    <type>Lookup</type>
</CustomField>