force-app/main/default/objects/Judgment__c/fields/Superior_Court_Address__c.field-meta.xml
<CustomField>
    <fullName>Superior_Court_Address__c</fullName>
    <formula>Superior_Court__r.Superior_Court_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Superior Court Address</label>
    <type>Text</type>
</CustomField>