force-app/main/default/objects/Judgment__c/fields/Superior_Court_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Superior_Court_Identifier__c</fullName>
    <description>Superior_Court_Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Superior_Court_Identifier</inlineHelpText>
    <label>Superior_Court_Identifier</label>
    <length>25</length>
    <type>Text</type>
</CustomField>