force-app/main/default/objects/Judgment__c/fields/Superior_Court_Name__c.field-meta.xml
<CustomField>
    <fullName>Superior_Court_Name__c</fullName>
    <formula>Superior_Court__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Superior Court Name</label>
    <type>Text</type>
</CustomField>