force-app/main/default/objects/Judgment__c/fields/Superior_Court_Province__c.field-meta.xml
<CustomField>
    <fullName>Superior_Court_Province__c</fullName>
    <description>Superior Court Province</description>
    <formula>TEXT( Superior_Court__r.Superior_Court_Province__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Superior Court Province</inlineHelpText>
    <label>Superior Court Province</label>
    <type>Text</type>
</CustomField>