force-app/main/default/objects/Judgment__c/fields/Template_Court_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Court_Name__c</fullName>
    <formula>CASE( Court__c , 
&quot;Small Claims Court​&quot;,  Small_Claims_Court__r.Name,
 &quot;Superior Court of Justice&quot;,  Superior_Court__r.Name,
&quot;Other&quot;,  &quot;&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Court Name</label>
    <type>Text</type>
</CustomField>