force-app/main/default/objects/Judgment__c/fields/Template_Court_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Template_Court_Phone_Number__c</fullName>
    <formula>CASE( Court__c ,
&quot;Small Claims Court​&quot;,  Small_Claims_Court__r.Small_Claims_Court_Phone_Number__c ,
&quot;Superior Court of Justice&quot;,  Superior_Court__r.Superior_Court_Phone_Number__c ,
&quot;Other&quot;, &quot;&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Court Phone Number</label>
    <type>Text</type>
</CustomField>