force-app/main/default/objects/Judgment__c/fields/Template_for_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_for_Customer_Type__c</fullName>
    <label>Template for Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Borrower</fullName>
                <default>true</default>
                <label>Primary Borrower</label>
            </value>
            <value>
                <fullName>Co-Borrower</fullName>
            </value>
            <value>
                <fullName>Guarantor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>