force-app/main/default/objects/Judgment__c/fields/Text_Filing_Date_Year__c.field-meta.xml
<CustomField>
    <fullName>Text_Filing_Date_Year__c</fullName>
    <formula>RIGHT(TEXT(YEAR(  Filing_Date__c )), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text Filing Date Year</label>
    <type>Text</type>
</CustomField>