force-app/main/default/objects/Judgment__c/fields/Text_Garnishment_Date__c.field-meta.xml
<CustomField>
    <fullName>Text_Garnishment_Date__c</fullName>
    <formula>RIGHT(TEXT(YEAR(  Garnishment_Date__c )), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text Garnishment Date</label>
    <type>Text</type>
</CustomField>