force-app/main/default/objects/Judgment__c/fields/Text_Judgment_Date__c.field-meta.xml
<CustomField>
    <fullName>Text_Judgment_Date__c</fullName>
    <formula>RIGHT(TEXT(YEAR( Judgment_Date__c )), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text Judgment Date</label>
    <type>Text</type>
</CustomField>