force-app/main/default/objects/Judgment__c/fields/Text_Todays_Date__c.field-meta.xml
<CustomField>
    <fullName>Text_Todays_Date__c</fullName>
    <formula>RIGHT(TEXT(YEAR(  TODAY() )), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text Todays Date</label>
    <type>Text</type>
</CustomField>