force-app/main/default/objects/Judgment__c/fields/Today_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Today_Date_Format__c</fullName>
    <formula>CASE(
MONTH(  TODAY() ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12,&quot;December&quot;,
&quot;&quot;) + &quot; &quot; + TEXT(DAY( TODAY() ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today Date Format</label>
    <type>Text</type>
</CustomField>