force-app/main/default/objects/Judgment__c/fields/Total_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Balance__c</fullName>
    <description>Total Balance as per the “Current Principal Balance” + “Current Interest Balance” + “NSF Fees” + “Balance Adjusting Disbursements”.</description>
    <formula>Current_Interest_Balance__c +  Current_Principal_Balance__c +  NSF_Fees__c +  Balance_Adjusting_Disbursements__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>