force-app/main/default/objects/Judgment__c/fields/Writ_Number__c.field-meta.xml
<CustomField>
    <fullName>Writ_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Writ Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>