force-app/main/default/objects/Judgment__c/fields/Writ_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Writ_Renewal_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Writ Renewal Date</label>
    <type>Date</type>
</CustomField>