force-app/main/default/objects/Judgment__c/recordTypes/Post_Judgment_Vacated.recordType-meta.xml
<RecordType>
    <fullName>Post_Judgment_Vacated</fullName>
    <active>true</active>
    <label>Post-Judgment-Vacated</label>
</RecordType>