force-app/main/default/objects/Judgment__c/validationRules/Filing_date_greater_than_judgment_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Filing_date_greater_than_judgment_date</fullName>
    <active>true</active>
    <description>Filing date should always be less than Judgement date</description>
    <errorConditionFormula>Filing_Date__c &gt; Judgment_Date__c</errorConditionFormula>
    <errorMessage>Filing date should always be less than Judgement date</errorMessage>
</ValidationRule>