force-app/main/default/objects/Judgment__c/validationRules/Interest_five_not_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Interest_five_not_required</fullName>
    <active>false</active>
    <description>Interest-5 is not required if Balance-5 is empty</description>
    <errorConditionFormula>AND(
    ISBLANK( Balance_five__c ),
    NOT(ISBLANK( Interest_Rate_five__c ))
)</errorConditionFormula>
    <errorDisplayField>Interest_Rate_five__c</errorDisplayField>
    <errorMessage>Interest-5 is not required if Balance-5 is empty</errorMessage>
</ValidationRule>