force-app/main/default/objects/Judgment__c/validationRules/Interest_five_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Interest_five_required</fullName>
    <active>false</active>
    <description>If Balance-5 is filled then Interest Rate-5 must be filled</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Balance_five__c)), 
    ISBLANK(Interest_Rate_five__c)
)</errorConditionFormula>
    <errorDisplayField>Interest_Rate_five__c</errorDisplayField>
    <errorMessage>Please provide Interest-5</errorMessage>
</ValidationRule>