force-app/main/default/objects/Judgment__c/validationRules/Interest_four_not_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Interest_four_not_required</fullName>
    <active>false</active>
    <description>Interest-4 is not required if Balance-4 is empty</description>
    <errorConditionFormula>AND(
    ISBLANK( Balance_four__c ),
    NOT(ISBLANK( Interest_Rate_four__c ))
)</errorConditionFormula>
    <errorDisplayField>Interest_Rate_four__c</errorDisplayField>
    <errorMessage>Interest-4 is not required if Balance-4 is empty</errorMessage>
</ValidationRule>