force-app/main/default/objects/Judgment__c/validationRules/Interest_one_not_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Interest_one_not_required</fullName>
    <active>false</active>
    <description>Interest-1 is not required if Balance-1 is empty</description>
    <errorConditionFormula>AND(
    
    ISBLANK( Balance_one__c ),
    NOT(ISBLANK( Interest_Rate_one__c ))
)</errorConditionFormula>
    <errorDisplayField>Interest_Rate_one__c</errorDisplayField>
    <errorMessage>Interest-1 is not required if Balance-1 is empty</errorMessage>
</ValidationRule>