force-app/main/default/objects/Judgment__c/validationRules/Interest_one_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Interest_one_required</fullName>
    <active>false</active>
    <description>If Balance-1 is filled then Interest Rate-1 must be filled</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Balance_one__c)), 
    ISBLANK(Interest_Rate_one__c)
)</errorConditionFormula>
    <errorDisplayField>Interest_Rate_one__c</errorDisplayField>
    <errorMessage>Please provide Interest-1</errorMessage>
</ValidationRule>