force-app/main/default/objects/Judgment__c/validationRules/Interest_three_not_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Interest_three_not_required</fullName>
    <active>false</active>
    <description>Interest-3 is not required if Balance-3 is empty</description>
    <errorConditionFormula>AND(
    ISBLANK( Balance_three__c ),
    NOT(ISBLANK( Interest_Rate_three__c ))
)</errorConditionFormula>
    <errorDisplayField>Interest_Rate_three__c</errorDisplayField>
    <errorMessage>Interest-3 is not required if Balance-3 is empty</errorMessage>
</ValidationRule>