force-app/main/default/objects/Judgment__c/validationRules/Interest_three_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Interest_three_required</fullName>
    <active>false</active>
    <description>If Balance-3 is filled then Interest Rate-3 must be filled</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Balance_three__c)), 
    ISBLANK(Interest_Rate_three__c)
)</errorConditionFormula>
    <errorDisplayField>Interest_Rate_three__c</errorDisplayField>
    <errorMessage>Please provide Interest-3</errorMessage>
</ValidationRule>