force-app/main/default/objects/Judgment__c/validationRules/Interest_two_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Interest_two_required</fullName>
    <active>false</active>
    <description>If Balance-2 is filled then Interest Rate-2 must be filled</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Balance_two__c)), 
    ISBLANK(Interest_Rate_two__c)
)</errorConditionFormula>
    <errorDisplayField>Interest_Rate_two__c</errorDisplayField>
    <errorMessage>Please provide Interest-2</errorMessage>
</ValidationRule>