force-app/main/default/objects/Judgment__c/validationRules/Legal_Agency_Cannot_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_Agency_Cannot_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Legal_Agency__c)</errorConditionFormula>
    <errorMessage>Legal Agency is Mandatory. Please fill Legal Agency field</errorMessage>
</ValidationRule>