force-app/main/default/objects/Judgment__c/validationRules/Legal_Sub_Status_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_Sub_Status_Required</fullName>
    <active>true</active>
    <description>If Legal Status is populated, Legal Substatus should become mandatory</description>
    <errorConditionFormula>AND(
$Setup.Application_Config_Settings__c.Bypass_Judgement_Validation__c == true,
    ISPICKVAL(Legal_Sub_Status__c,&apos;&apos;),
    NOT(ISPICKVAL(Legal_Status__c, &apos;&apos;))
)</errorConditionFormula>
    <errorDisplayField>Legal_Sub_Status__c</errorDisplayField>
    <errorMessage>Please select Legal Sub Status</errorMessage>
</ValidationRule>