force-app/main/default/objects/Judgment__c/validationRules/Number_of_Payments.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Payments</fullName>
    <active>true</active>
    <description>Number of payments should be greater than  0</description>
    <errorConditionFormula>Number_of_payments__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Number_of_payments__c</errorDisplayField>
    <errorMessage>Number of payments should be greater than  0</errorMessage>
</ValidationRule>