force-app/main/default/objects/Judgment__c/validationRules/Post_Judgment_Cannot_set_manually.validationRule-meta.xml
<ValidationRule>
    <fullName>Post_Judgment_Cannot_set_manually</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW(),
 ISPICKVAL( Legal_Status__c ,&apos;Post-Judgment&apos;),
ISPICKVAL( Legal_Sub_Status__c ,&apos;Vacated&apos;) 
 )</errorConditionFormula>
    <errorDisplayField>Legal_Sub_Status__c</errorDisplayField>
    <errorMessage>Legal Sub Status cannot be set to Vacated directly</errorMessage>
</ValidationRule>